# struct_validation

./: Cargo.toml
src/: lib.rs
