[package]
name = "struct_validation"
version = "0.1.0"
authors = ["biodread <biodread.0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }